--- a/Eador_M_of_the_B_W_Launcher.Sln/DATAGame_Library/DATAGame_Library.csproj
+++ b/Eador_M_of_the_B_W_Launcher.Sln/DATAGame_Library/DATAGame_Library.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DATA\DATAGame.cs" />
     <Compile Include="MainDataGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
