--- a/Eador_M_of_the_B_W_Launcher.Sln/Eador_M_of_the_B_W_Library/Eador_M_of_the_B_W_Library.csproj
+++ b/Eador_M_of_the_B_W_Launcher.Sln/Eador_M_of_the_B_W_Library/Eador_M_of_the_B_W_Library.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D82F9DAA-9F71-4FC7-AA17-FDB5A4FF74E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DATAGame_Library</RootNamespace>
-    <AssemblyName>DATAGame_Library</AssemblyName>
+    <RootNamespace>Eador_M_of_the_B_W_Library</RootNamespace>
+    <AssemblyName>Eador_M_of_the_B_W_Library</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
